Working slider with cars

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="orange_light">#ff7043</color>
     <color name="light_blue">#4fc3f7</color>
     <color name="blue_grey">#90a4ae</color>
+    <color name="red_primary">#d50000</color>
 </resources>
