Maked fuels list, begin to work on fragments stack

--- a/app/src/main/res/layout/spendings_fragment.xml
+++ b/app/src/main/res/layout/spendings_fragment.xml
@@ -117,7 +117,8 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/fuel_spendings"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />
+        app:srcCompat="@android:drawable/ic_menu_sort_by_size"
+        android:onClick="showFuelsList"/>
 
 
     <ImageButton
