--- a/app/src/main/res/layout/fuel_up_fragment.xml
+++ b/app/src/main/res/layout/fuel_up_fragment.xml
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:hint="Value"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
