--- a/app/src/main/res/layout/fuels_list_header.xml
+++ b/app/src/main/res/layout/fuels_list_header.xml
@@ -26,6 +26,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
+        android:textColor="@color/green"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
