--- a/app/src/main/res/layout/main_const.xml
+++ b/app/src/main/res/layout/main_const.xml
@@ -9,14 +9,13 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
-        android:layout_width="292dp"
+        android:layout_width="254dp"
         android:layout_height="100dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/transparent_white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></android.support.v4.view.ViewPager>
 
@@ -63,7 +62,8 @@
             app:fabSize="mini"
             app:layout_constraintBottom_toTopOf="@+id/fab_fuel"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_wrench" />
+            app:srcCompat="@drawable/ic_wrench"
+            android:onClick="addNewService"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_fluid"
@@ -108,7 +108,6 @@
         app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pager">
-
     </android.support.constraint.ConstraintLayout>
 
     <ImageButton
@@ -133,5 +132,19 @@
         app:layout_constraintStart_toEndOf="@+id/pager"
         app:srcCompat="@drawable/ic_black_minus"
         android:onClick="deleteCar"/>
+
+    <TextView
+        android:id="@+id/btn_set_mileage"
+        android:layout_width="38dp"
+        android:layout_height="36dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/transparent_white"
+        android:gravity="center"
+        android:text="km"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/pager"
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="showSetMileageActivity"/>
 
 </android.support.constraint.ConstraintLayout>
