--- a/app/src/main/res/layout/spendings_fragment.xml
+++ b/app/src/main/res/layout/spendings_fragment.xml
@@ -131,7 +131,8 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/repairs_spendings"
         app:layout_constraintTop_toBottomOf="@+id/iv_fuels_list"
-        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />
+        app:srcCompat="@android:drawable/ic_menu_sort_by_size"
+        android:onClick="showRepairsList"/>
 
     <ImageButton
         android:id="@+id/iv_fluids_list"
