--- a/app/src/main/res/layout/main_const.xml
+++ b/app/src/main/res/layout/main_const.xml
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_main">
+    android:fillViewport="true"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/bg_main">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="254dp"
-        android:layout_height="100dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/transparent_white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></android.support.v4.view.ViewPager>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="254dp"
+            android:layout_height="100dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/transparent_white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></android.support.v4.view.ViewPager>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_plus"
@@ -41,7 +46,7 @@
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             android:src="@drawable/ic_gas"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:backgroundTint="@color/green"
             app:fabSize="mini"
             app:layout_constraintBottom_toTopOf="@+id/fab_plus"
@@ -56,14 +61,14 @@
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             android:clickable="true"
+            android:onClick="addNewService"
             android:src="@drawable/ic_wrench"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:backgroundTint="@color/orange_light"
             app:fabSize="mini"
             app:layout_constraintBottom_toTopOf="@+id/fab_fuel"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_wrench"
-            android:onClick="addNewService"/>
+            app:srcCompat="@drawable/ic_wrench" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_fluid"
@@ -74,7 +79,7 @@
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             android:clickable="true"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:backgroundTint="@color/light_blue"
             app:fabSize="mini"
             app:layout_constraintBottom_toTopOf="@+id/fab_repair"
@@ -90,61 +95,73 @@
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             android:clickable="true"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:backgroundTint="@color/blue_grey"
             app:fabSize="mini"
             app:layout_constraintBottom_toTopOf="@+id/fab_fluid"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/ic_filter" />
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/central_fragment"
-        android:layout_width="292dp"
-        android:layout_height="375dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pager">
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/central_fragment"
+            android:layout_width="292dp"
+            android:layout_height="380dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="@+id/btn_set_mileage"
+            app:layout_constraintTop_toBottomOf="@+id/pager">
+
+            <fragment
+                android:id="@+id/sp_fragment"
+                android:name="deskind.com.rollingwheels.fragments.SpendingsFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
+
+        <ImageButton
+            android:id="@+id/ib_add_car"
+            android:layout_width="38dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/transparent_white"
+            android:onClick="addNewCar"
+            app:layout_constraintStart_toEndOf="@+id/pager"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_plus" />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="38dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/transparent_white"
+            android:onClick="deleteCar"
+            app:layout_constraintBottom_toBottomOf="@+id/pager"
+            app:layout_constraintStart_toEndOf="@+id/pager"
+            app:srcCompat="@drawable/ic_black_minus" />
+
+        <TextView
+            android:id="@+id/btn_set_mileage"
+            android:layout_width="38dp"
+            android:layout_height="36dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/transparent_white"
+            android:gravity="center"
+            android:onClick="showSetMileageActivity"
+            android:text="km"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toStartOf="@+id/pager"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </android.support.constraint.ConstraintLayout>
-
-    <ImageButton
-        android:id="@+id/ib_add_car"
-        android:layout_width="38dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/transparent_white"
-        app:layout_constraintStart_toEndOf="@+id/pager"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_plus"
-        android:onClick="addNewCar"/>
-
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="38dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="8dp"
-        android:background="@drawable/transparent_white"
-        app:layout_constraintBottom_toBottomOf="@+id/pager"
-        app:layout_constraintStart_toEndOf="@+id/pager"
-        app:srcCompat="@drawable/ic_black_minus"
-        android:onClick="deleteCar"/>
-
-    <TextView
-        android:id="@+id/btn_set_mileage"
-        android:layout_width="38dp"
-        android:layout_height="36dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/transparent_white"
-        android:gravity="center"
-        android:text="km"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/pager"
-        app:layout_constraintTop_toTopOf="parent"
-        android:onClick="showSetMileageActivity"/>
-
-</android.support.constraint.ConstraintLayout>
+</ScrollView>
