--- a/app/src/main/res/layout/main_const.xml
+++ b/app/src/main/res/layout/main_const.xml
@@ -79,6 +79,7 @@
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             android:clickable="true"
+            android:onClick="addNewService"
             android:visibility="visible"
             app:backgroundTint="@color/light_blue"
             app:fabSize="mini"
@@ -95,6 +96,7 @@
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             android:clickable="true"
+            android:onClick="addNewService"
             android:visibility="visible"
             app:backgroundTint="@color/blue_grey"
             app:fabSize="mini"
@@ -136,7 +138,8 @@
             android:onClick="addNewCar"
             app:layout_constraintStart_toEndOf="@+id/pager"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_plus" />
+            android:src="@drawable/ic_plus"
+            />
 
         <ImageButton
             android:id="@+id/imageButton"
@@ -147,7 +150,7 @@
             android:onClick="deleteCar"
             app:layout_constraintBottom_toBottomOf="@+id/pager"
             app:layout_constraintStart_toEndOf="@+id/pager"
-            app:srcCompat="@drawable/ic_black_minus" />
+            android:src="@drawable/ic_black_minus" />
 
         <TextView
             android:id="@+id/btn_set_mileage"
