--- a/app/src/main/res/layout/main_const.xml
+++ b/app/src/main/res/layout/main_const.xml
@@ -1,170 +1,205 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true"
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/bg_main">
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
-            android:layout_width="254dp"
-            android:layout_height="100dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/transparent_white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"></android.support.v4.view.ViewPager>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_plus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:src="@drawable/ic_plus"
-            app:fabSize="mini"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_fuel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@id/fab_plus"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:src="@drawable/ic_gas"
-            android:visibility="visible"
-            app:backgroundTint="@color/green"
-            app:fabSize="mini"
-            app:layout_constraintBottom_toTopOf="@+id/fab_plus"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_repair"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@id/fab_fuel"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:clickable="true"
-            android:onClick="addNewService"
-            android:src="@drawable/ic_wrench"
-            android:visibility="visible"
-            app:backgroundTint="@color/orange_light"
-            app:fabSize="mini"
-            app:layout_constraintBottom_toTopOf="@+id/fab_fuel"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_wrench" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_fluid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@id/fab_repair"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:clickable="true"
-            android:onClick="addNewService"
-            android:visibility="visible"
-            app:backgroundTint="@color/light_blue"
-            app:fabSize="mini"
-            app:layout_constraintBottom_toTopOf="@+id/fab_repair"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_fluid" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_filter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@id/fab_fluid"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:clickable="true"
-            android:onClick="addNewService"
-            android:visibility="visible"
-            app:backgroundTint="@color/blue_grey"
-            app:fabSize="mini"
-            app:layout_constraintBottom_toTopOf="@+id/fab_fluid"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_filter" />
+    android:id="@+id/main_drawer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
         <android.support.constraint.ConstraintLayout
-            android:id="@+id/central_fragment"
-            android:layout_width="292dp"
-            android:layout_height="380dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintStart_toStartOf="@+id/btn_set_mileage"
-            app:layout_constraintTop_toBottomOf="@+id/pager">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_main"
+            >
 
-            <fragment
-                android:id="@+id/sp_fragment"
-                android:name="deskind.com.rollingwheels.fragments.SpendingsFragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="8dp"
+            <android.support.v4.view.ViewPager
+                android:id="@+id/pager"
+                android:layout_width="254dp"
+                android:layout_height="100dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/transparent_white"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"></android.support.v4.view.ViewPager>
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_plus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/ic_plus"
+                app:fabSize="mini"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_fuel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@id/fab_plus"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/ic_gas"
+                android:visibility="visible"
+                app:backgroundTint="@color/green"
+                app:fabSize="mini"
+                app:layout_constraintBottom_toTopOf="@+id/fab_plus"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_repair"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@id/fab_fuel"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="16dp"
+                android:clickable="true"
+                android:onClick="addNewService"
+                android:src="@drawable/ic_wrench"
+                android:visibility="visible"
+                app:backgroundTint="@color/orange_light"
+                app:fabSize="mini"
+                app:layout_constraintBottom_toTopOf="@+id/fab_fuel"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:srcCompat="@drawable/ic_wrench" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_fluid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@id/fab_repair"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="16dp"
+                android:clickable="true"
+                android:onClick="addNewService"
+                android:visibility="visible"
+                app:backgroundTint="@color/light_blue"
+                app:fabSize="mini"
+                app:layout_constraintBottom_toTopOf="@+id/fab_repair"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:srcCompat="@drawable/ic_fluid" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_filter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@id/fab_fluid"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="16dp"
+                android:clickable="true"
+                android:onClick="addNewService"
+                android:visibility="visible"
+                app:backgroundTint="@color/blue_grey"
+                app:fabSize="mini"
+                app:layout_constraintBottom_toTopOf="@+id/fab_fluid"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:srcCompat="@drawable/ic_filter" />
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/central_fragment"
+                android:layout_width="292dp"
+                android:layout_height="380dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="@+id/btn_set_mileage"
+                app:layout_constraintTop_toBottomOf="@+id/pager">
+
+                <fragment
+                    android:id="@+id/sp_fragment"
+                    android:name="deskind.com.rollingwheels.fragments.SpendingsFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.0" />
+            </android.support.constraint.ConstraintLayout>
+
+            <ImageButton
+                android:id="@+id/ib_add_car"
+                android:layout_width="38dp"
+                android:layout_height="36dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/transparent_white"
+                android:onClick="addNewCar"
+                android:src="@drawable/ic_plus"
+                app:layout_constraintStart_toEndOf="@+id/pager"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/imageButton"
+                android:layout_width="38dp"
+                android:layout_height="36dp"
+                android:layout_marginStart="8dp"
+                android:background="@drawable/transparent_white"
+                android:onClick="deleteCar"
+                android:src="@drawable/ic_black_minus"
+                app:layout_constraintBottom_toBottomOf="@+id/pager"
+                app:layout_constraintStart_toEndOf="@+id/pager" />
+
+            <TextView
+                android:id="@+id/btn_set_mileage"
+                android:layout_width="38dp"
+                android:layout_height="36dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/transparent_white"
+                android:gravity="center"
+                android:onClick="showSetMileageActivity"
+                android:text="km"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toStartOf="@+id/pager"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_currency"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="Your currency is: "
+                android:textColor="@color/indigo_dark"
+                android:textSize="18sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/tv_currency1"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_currency1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="16dp"
+                android:text="------"
+                android:textColor="@color/indigo_dark"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/tv_currency" />
+
         </android.support.constraint.ConstraintLayout>
 
-        <ImageButton
-            android:id="@+id/ib_add_car"
-            android:layout_width="38dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/transparent_white"
-            android:onClick="addNewCar"
-            app:layout_constraintStart_toEndOf="@+id/pager"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/ic_plus"
+        <android.support.design.widget.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:menu="@menu/drawer_menu"
             />
 
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="38dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/transparent_white"
-            android:onClick="deleteCar"
-            app:layout_constraintBottom_toBottomOf="@+id/pager"
-            app:layout_constraintStart_toEndOf="@+id/pager"
-            android:src="@drawable/ic_black_minus" />
-
-        <TextView
-            android:id="@+id/btn_set_mileage"
-            android:layout_width="38dp"
-            android:layout_height="36dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/transparent_white"
-            android:gravity="center"
-            android:onClick="showSetMileageActivity"
-            android:text="km"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toStartOf="@+id/pager"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </android.support.constraint.ConstraintLayout>
-</ScrollView>
+</android.support.v4.widget.DrawerLayout>
