--- a/app/src/main/res/layout/main_const.xml
+++ b/app/src/main/res/layout/main_const.xml
@@ -189,6 +189,7 @@
                 android:text="------"
                 android:textColor="@color/indigo_dark"
                 android:textSize="14sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tv_currency" />
 
@@ -211,6 +212,7 @@
                 android:text="All time"
                 android:textColor="@color/indigo_dark"
                 android:textSize="14sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/tv_currency"
                 app:layout_constraintStart_toEndOf="@+id/tv_period" />
 
