--- a/app/src/main/res/layout/spendings_fragment.xml
+++ b/app/src/main/res/layout/spendings_fragment.xml
@@ -12,11 +12,11 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:background="@drawable/transparent_white"
         android:onClick="showFuelsList"
+        android:padding="5dp"
         android:text="@string/fuel"
         android:textSize="32sp"
-        android:padding="5dp"
-        android:background="@drawable/transparent_white"
         app:layout_constraintEnd_toStartOf="@+id/fuel_spendings"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,11 +26,11 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:onClick="showRepairsList"
-        android:text="@string/repairs_label"
         android:background="@drawable/transparent_white"
-        android:textSize="32sp"
+        android:onClick="showRepairsList"
         android:padding="5dp"
+        android:text="@string/repairs_label"
+        android:textSize="32sp"
         app:layout_constraintEnd_toStartOf="@+id/repairs_spendings"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,11 +41,11 @@
         android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:onClick="showFluidsList"
-        android:text="@string/fluids"
         android:background="@drawable/transparent_white"
-        android:textSize="32sp"
+        android:onClick="showFluidsList"
         android:padding="5dp"
+        android:text="@string/fluids"
+        android:textSize="32sp"
         app:layout_constraintEnd_toStartOf="@+id/fluids_spendings"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,15 +56,31 @@
         android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:onClick="showFiltersList"
-        android:text="@string/filters"
         android:background="@drawable/transparent_white"
-        android:textSize="32sp"
+        android:onClick="showFiltersList"
         android:padding="5dp"
+        android:text="@string/filters"
+        android:textSize="32sp"
         app:layout_constraintEnd_toStartOf="@+id/filters_spendings"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_fluids" />
+
+    <TextView
+        android:id="@+id/tv_other"
+        android:layout_width="110dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/transparent_white"
+        android:padding="5dp"
+        android:text="@string/other_expenses"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/other_spendings"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_filters" />
 
     <TextView
         android:id="@+id/fuel_spendings"
@@ -114,5 +130,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tv_filters" />
+
+    <TextView
+        android:id="@+id/other_spendings"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="0"
+        android:textAlignment="center"
+        android:textSize="32sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/tv_other"
+        app:layout_constraintTop_toBottomOf="@+id/filters_spendings" />
 
 </android.support.constraint.ConstraintLayout>
