--- a/app/src/main/res/layout/main_const.xml
+++ b/app/src/main/res/layout/main_const.xml
@@ -106,6 +106,23 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:srcCompat="@drawable/ic_filter" />
 
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_other"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@id/fab_filter"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="16dp"
+                android:clickable="true"
+                android:onClick="addNewService"
+                android:visibility="visible"
+                app:backgroundTint="@color/blue_grey"
+                app:fabSize="mini"
+                app:layout_constraintBottom_toTopOf="@+id/fab_filter"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:srcCompat="@drawable/ic_other" />
+
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/central_fragment"
                 android:layout_width="292dp"
