--- a/app/src/main/res/layout/spendings_fragment.xml
+++ b/app/src/main/res/layout/spendings_fragment.xml
@@ -73,6 +73,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/transparent_white"
         android:padding="5dp"
+        android:onClick="showOtherssList"
         android:text="@string/other_expenses"
         android:textAlignment="center"
         android:textSize="18sp"
